# body-eye-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pypi.yml
installer/: .gitignore  construct.yaml  construct.yaml.j2  menu.json  post_install.bat  pre_uninstall.bat  render_construct.py
installer/recipes/body-eye-sync/: menu.json  recipe.yaml
installer/recipes/boxmot/: recipe.yaml
resources/: README.md
src/amgaze/: __init__.py  align_gaze_timestamps.py  cluster_tracklets.py  compute_gaze_on_faces.py  extract_face_landmarks.py  gui.py  pipeline_backend.py
src/body_eye_sync/: __main__.py  cli.py  gui.py  state.py  tracking.py  video_viewer.py
src/body_eye_sync/experiment/: config.py  run.py  video.py
src/body_eye_sync/gui/: __init__.py  autoupdate.py  base_worker.py  body_pose_worker.py  face_detection_worker.py  main_window.py  object_tracking_worker.py  pipeline_editor.py  pydantic_form.py  tracking_worker.py  utils.py  video_viewer.py
src/body_eye_sync/pipeline/: body_pose.py  detection.py  face_detection.py  object_tracking.py  tracking.py
tests/: conftest.py  test_cli.py  test_gui.py  test_main.py  test_state.py  test_tracking.py  test_video_viewer.py
tests/experiment/: test_config.py  test_run.py  test_video.py
tests/gui/: test_autoupdate.py  test_main_window.py  test_pipeline_editor.py  test_pydantic_form.py  test_video_viewer.py
tests/pipeline/: test_body_pose.py  test_detection.py  test_face_detection.py  test_object_tracking.py  test_tracking.py
