[project]
name = "amgaze-tracklet-clustering"
version = "0.1.0"
description = "Cluster BoxMoT tracklets into per-person identities using body re-ID (OSNet) + face (InsightFace) embeddings."
requires-python = ">=3.13,<3.14"
dependencies = [
    "boxmot>=19,<20",
    "numpy",
    "opencv-python",
    "pillow",
    "pyside6",
    "qtpy",
    "scikit-learn",
    "tqdm",
    "torch",
    "torchvision",
    "torchreid",
    "ultralytics",
    "gdown",
    "insightface",
    "onnxruntime-gpu",
    "tensorboard>=2.20.0",
]

[project.scripts]
amgaze = "amgaze.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amgaze"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
