[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "body-eye-sync"
version = "0.0.2"
dependencies = [
    "boxmot>=21.0.0,<22.0.0",  # see pipeline/object_tracking.py
    "ultralytics",
    "click",
    "numpy",
    "opencv-python",
    "packaging",
    "pandas",
    "qtpy",
    "pyside6",
    "insightface",
    "onnxruntime",
]
authors = [
    { name = "SSC" },
]
license = "MIT"
license-files = ["LICENSE.md"]
description = "Synchronize body and eye tracking data"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Github = "https://github.com/ssciwr/body-eye-sync"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
]

[project.scripts]
body-eye-sync = "body_eye_sync.__main__:main"
body-eye-sync-cli = "body_eye_sync.cli:main"
